CSS/styles.css
/*Font I plan to use*/
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;1,300&display=swap");

/*******************
    GLOBAL EDITS
********************/
body, .button {
  background: black;
  font-family: "Nunito", sans-serif;
  margin: 0;
}

p,
h1,
h2,
h3,
li {
  color: white;
}

h1 {
  margin: 0;
  font-size: 65px;
  padding-top: 80px;
}

h3 {
  text-align: center;
}

ul {
  list-style-type: none;
}

section {
  width: 100%;
  height: 100vh;
}

/*****************
    NAVBAR
******************/
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-height: 70px;
  position: sticky;
  top: 0px;
  background-color: black;
  width: 100%;
  opacity: 90%
}

.bar-options {
  display: flex;
}

.logo {
  font-size: 30px;
  letter-spacing: 4px;
  margin: 0% 3%;
}

.button {
  width: 196px;
  background-color: black;
  color: #a0a0a0;
  margin: 0px 62px;
  cursor: pointer;
  padding: 15px 32px;
  font-size: 20px;
  position: relative;
  text-decoration: none;
}

/*Putting these affects after each button element*/
.button:after {
  content: "";
  position: absolute;
  bottom: 0px;
  left: 0%;
  background-color: white;
  height: 2px;
  width: 100%;
  transition: ease-out 0.3s;
  width: 0px;
}

/* Hovering over the button */
.button:hover:after {
  width: 100%;
}
.button:hover {
  color: white;
}

/*****************
    INTRO TITLE
******************/
.intro-container {
  height: 100vh;
  width: 100%;
  background-image: url(../Images/buildings.jpg);
  background-size: cover;
}

.overlay {
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.671);
}

.intro-overlay {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.overlay p {
  margin: 0;
}

.dash {
  display: block;
  width: 100px;
  height: 2.3px;
  background-color: rgba(255, 115, 1, 0.438);
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 3px;
}

/***************
    ABOUT
****************/

.about-flexbox {
  display: flex;
  justify-content: space-around; /*putting space around 2 items in the flexbox*/
}

.about-item {
  margin: 100px;
}

.about-text {
  width: 832px;
  height: 477px;
}

.justin-bui-img {
  margin-top: 100px;
  width: 442px;
  height: 600px;
  clip-path: circle(at 50% 30%);
}

/*******************
  TECHNICAL SKILLS
********************/

.technical-skills-container {
  background-image: url(../Images/giphy.gif);
  background-size: cover;
}

/*styling each flexbox*/
.technical-skills-flexbox {
  display: flex;
  justify-content: space-around;
}

.technical-skills-overlay h1 {
  margin: 54px;
}

.ratings-container {
  width: 591px;
  margin: 24px;
  background-color: rgba(0, 0, 0, 0.86);
  margin-bottom: 130px;
}

.programming-languages {
  overflow: auto;
}

/*styling my ratings of each skill*/
.all-skills li {
  margin: 20px;
}

.bar {
  display: block;
  background-color: #272626;
  height: 2px;
  width: 360px;
  margin: 15px;
  box-shadow: 0 0 9px #05ff00;
  border: 1px solid rgba(0, 0, 0, 0.3);
}

.skill {
  float: left;
  height: 2px;
  background: #05ff00;
}

.Python {
  width: 60%;
}

.C {
  width: 70%;
}

.CPP {
  width: 80%;
}

.NASM {
  width: 40%;
}

.HTML5 {
  width: 30%;
}

.CSS {
  width: 29%;
}

.Debugging {
  width: 73%;
}

.Linux-Commands {
  width: 48%;
}

/********************
  MY LATEST WORK
*********************/

.latest-header {
  text-align: center;
}

/*********************
  CONTACT
*********************/
.contact {
  text-align: center;
  background-color: #070707;
  height: 450px;
  margin-top: 85px;
}

.contact h3 {
  padding: 45px;
  color: white;
}

.link {
  margin: 10px;
  display: inline-block;
}

.logo {
  width: 45px;
  height: 45px;
}

.line {
  display: block;
  width: 420px;
  height: 0.5px;
  background-color: white;
  margin-left: auto;
  margin-right: auto;
}

